# cartas_cliente

./: .dockerignore  .gitignore  .python-version  .railwayignore  .renderignore  Dockerfile  Dockerfile.simple  Dockerfile_full  Dockerfile_minimal  ENVIRONMENT_VARIABLES.md  OTIMIZACOES.md  Procfile  README.md  README_COMPLETO.md  README_DEPLOY.md  README_FINAL.md  README_MINIMAL.md  README_MULTIPLOS_NUMEROS.md  README_RAILWAY.md  README_SEM_PANDAS.md  SVG_ONLY.md  aplicar_margens_restantes.py  aplicar_margens_templates_4_6.py  app.py  app_full.py  app_minimal.py  app_simple.py  aumentar_margens_templates.py  build.sh  centralizar_tabelas.py  check_excel.py  constraints.txt  criar_template_exemplo.py  debug_svg.py  deploy_full.sh  et --hard dff0636  executar_aumento_margens.py  fix_fonts.py  nixpacks.toml  processador_excel.py  (+21 more)
api/: index.py
templates/: Modelo-de-Carta-Pessoal.md  index.html  template_exemplo.html  template_html_teste.html
