[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carta-automatica"
version = "1.0.0"
description = "Sistema de Cartas Automáticas com Templates SVG"
requires-python = ">=3.8,<3.14"
dependencies = [
    "Flask==2.3.3",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "cairosvg==2.8.0",
    "PyPDF2==3.0.1",
    "Werkzeug==2.3.7",
    "gunicorn==21.2.0",
]

[tool.setuptools]
packages = ["app"] 